
5.2b1 -> 5.3a1
    - jbj: rpmmi: optimize NVRA range queries using a *RE stem.
    - jbj: rpmdb: inline rpmdbOpenAll for inplace --rebuilddb. sadly
	DB->associate(..., DB_CREATE) is not free threaded w -fopenmp. oh well.
    - jbj: rpmts: take checkpoints beroe and after --rebuilddb.
    - jbj: rpmdb: do in-place rebuilddb, opt-in for now.
    - jbj: rpmdb: lazily create non-existent secondary indices.
    - jbj: rpmdb: consolidate primary key swabbing to network order.
    - jbj: rpmdb: re-open dbenv w DB_RUNRECOVER rather than remove/verify.
    - jbj: rpmdb: handle optional .A just like optional -V and -R patterns.
    - jbj: rpmdb: use RPMTAG_NVRA patterns for RPMDBI_LABEL rpmmi iterators.
    - jbj: rpmdb: permit anchored patterns on RPMDBI_LABEL retrieves. strings
	are escaped and anchored. Still only RPMTAG_NAME, RPMTAG_NVRA next.
    - jbj: perform checkpoint after every successful transaction.
    - jbj: rpmtxn: expose rpmtxnCheckpoint.
    - rpm.org: Only report disk space/inode issues for affected packages.
    - jbj: rpmdb: mark code to renumber primary keys when needed.
    - jbj: rpmmi: fix: return native endian, but store big endian, primary keys.
    - jbj: DB_CONFIG: create /var/lib/rpm/tmp subdir.
    - jbj: DB_CONFIG: move log files to /var/liog/rpm/log subdir.
    - jbj: DB_CONFIG: configure set_lk_max_{locks,lockers,objects} to 4000.
    - jbj: bspatch: use bzip2 through -lrpmio.
    - jbj: rpmbz: expose sufficient methods to uncouple bspatch from bzip2.
    - bero: Fix configure script for autoconf 2.65 without breaking 2.63
    - jbj: bsdiff: use bzip2 through -lrpmio.
    - jbj: rpmbz: expose sufficient methods to uncouple bsdiff from bzip2.
    - jbj: add bsdiff/bspatch from bsdiff-4.3.
    - jbj: rpmlio: add "opt-in" enablers for syscall/scriptlet logging.
    - jbj: rpmlio: add --rpmliodebug spewage valve.
    - jbj: rpmlio: add syscall/scriplet logging to -lrpmdb API for rework.